Fix line break in ViewRecipe bug

--- a/src/components/ViewRecipe.css
+++ b/src/components/ViewRecipe.css
@@ -16,6 +16,7 @@
     margin: 0 auto;
     padding-top: 10px;
     padding: 10px;
+    white-space: pre;
 }
 
 .modal h3 {
